Changes since version 3.1.0
---------------------------     

- Fixed a bug in slice2cpp that caused incorrect code to be generated
  if a class had member that was an interface (not class) by value:

  interface I
  {
      void op();
  };

  class C
  {
      void op();
  };

  class MyClass
  {
      I myI;		// Note: I, not I*. Bad code generated for this in 3.1.0.
      I* myIstar;	// OK, no problem with 3.1.0.
      C myC;		// OK, no problem with 3.1.0.
      C myCstar;	// OK, no problem with 3.1.0.
  };

- For non-abstract Slice classes, the C++ code generator now adds a
  protected destructor. This prevents accidental allocation of
  class instances on the stack or as static variables. For the
  implementation of abstract Slice classes, and for servant classes,
  applications can do the same thing and add a protected destructor
  to prevent non-heap allocation.

- Fixed a bug in the IceGrid replication code which would cause clients
  to get an Ice::NoEndpointException if the node of a replica was
  inactive.

- Fixed a bug in the IceGrid XML parser which could cause a crash if
  the adapter element for the IceBox.ServiceManager adapter was
  specified in the icebox element.

- Restored Communicator::setDefaultContext

- Fixed a bug in Ice::initialize() that raised a NullHandleException
  when the function was called without arguments or when the
  properties member of InitializationData was null.

Changes since version 3.0.1
---------------------------

- Fixed a bug in slice2cpp that could cause incorrect code to
  be generated if a class contained a member to another class,
  but that class was only forward declared.

- Unsupported port to Solaris 10 on Intel/AMD contributed by
  Markus Bernhardt.

- Removed removeObjectFactory() from the communicator interface.

- Added a new object and server allocation mechanism to IceGrid. See
  the Ice manual for more information.

- The IceGrid XML descriptor <adapter> can only be used to specify